--- a/templates/config.j2
+++ b/templates/config.j2
@@ -1,3 +1,3 @@
-{% for item in modprobe_general + modprobe_extra %}{% if item.state | default('present') == 'present' %}
-{{ item.name | default(item) }}{{ ' ' + item.params if item.params | default(False) else '' }}
+{% for item in modprobe_general + modprobe_extra %}{% if item.state is undefined or (item.state == 'present') %}
+{{ item.name if item.name is defined else item }}{{ ' ' + item.params if item.params is defined else '' }}
 {% endif %}{% endfor %}
